syntax = "proto3";

package payment;

option go_package = "payment.grpc";
option csharp_namespace = "Marketplace.Payment.Grpc";

// Сервис оплаты
service PaymentService {
    rpc CreatePayment (CreatePaymentRequest) returns (PaymentIdResponse); // Создать платёж
    rpc GetPayment (GetPaymentRequest) returns (PaymentIdResponse); // Получить платёж
}

// Запрос на создание заказа
message CreatePaymentRequest {
    int64 order_id = 1; // Идентификатор заказа
    int32 payble_amount = 2; // Стоимость к оплате
}

// Запрос на получение платежа
message GetPaymentRequest {
    int64 order_id = 1; // Идентификатор заказа
}

// Ответ с идентификатором платежа
message PaymentIdResponse {
    string id = 1; // Идентификатор платежа
}